chore: add copying static files to build script

--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -4,6 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://katla.cloud" />
+    <meta property="og:title" content="Katla 🐉" />
+    <meta property="og:site_name" content="Katla" />
+    <meta
+      property="og:description"
+      content="Katla, a Biogas Digester located in the heart of Otaniemi, Espoo, Finland."
+    />
+    <meta property="og:image" content="./katla.jpg" />
+    <meta property="og:image:alt" content="Katla Biodigester" />
+    <link rel="image_src" href="./katla.jpg" />
+    <link rel="canonical" />
     <title>Katla 🐉</title>
     <style>
       @font-face {
