--- a/server/src/static/index.html
+++ b/server/src/static/index.html
@@ -28,9 +28,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 1.5rem;
       }
 
       body > img {
+        max-width: 86vw;
         width: max-content;
       }
       a {
